recursion.logo.spiral.SpiralUse.scala.error
Erreur de compilation :
SpiralUse:3: error: type mismatch;
 found   : Double(0.1)
 required: Int
    spiral(84,79,4,0.1);
                   ^