recursion.logo.spiral.SpiralUse.scala.code
override def run() {
    spiral(84,79,4,0.1);
}